--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="../CSS/Home.css">
+    <link rel="stylesheet" href="/CSS/Home.css">
 </head>
 <body>
     <div class="free">
@@ -21,21 +21,21 @@
         <div class="my_nav">
             <nav>
                 <ul>
-                    <a href="../HTML/Home.html"><li>Home</li></a>
-                    <a href="../HTML/Sale.html"><li>Sale</li></a>
-                    <a href="../HTML/Rain.html"><li>Rain</li></a>
-                    <a href="../HTML/Snow.html"><li>Snow</li></a>
-                    <a href="../HTML/All_wealther.html"><li>All Wealther</li></a>
-                    <a href="../HTML/Shop All.html"><li>Shop All</li></a>
-                    <a href="../HTML/Values.html"><li>Values</li></a>
+                    <a href="/Home.html"><li>Home</li></a>
+                    <a href="/Sale.html"><li>Sale</li></a>
+                    <a href="/Rain.html"><li>Rain</li></a>
+                    <a href="/Snow.html"><li>Snow</li></a>
+                    <a href="/All_wealther.html"><li>All Wealther</li></a>
+                    <a href="/Shop All.html"><li>Shop All</li></a>
+                    <a href="/Values.html"><li>Values</li></a>
                 </ul>
             </nav>
         </div>
 
         <div class="icon">
             <a href=""><img class="icon icon1" src="../IMAGES/search.png" alt=""></a>
-            <a href="../HTML/Login.html"><img class="icon icon2" src="../IMAGES/profile.png" alt=""></a>
-            <a href="../HTML/Cart.html"><img class="icon icon3" src="../IMAGES/cart.png" alt=""></a>
+            <a href="/Login.html"><img class="icon icon2" src="../IMAGES/profile.png" alt=""></a>
+            <a href="/Cart.html"><img class="icon icon3" src="../IMAGES/cart.png" alt=""></a>
         </div>
     </section>
     <!-- <hr> -->
