--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </div>
 
         <div class="icon">
-            <a href=""><img class="icon icon1" src="../IMAGES/search.png" alt=""></a>
-            <a href="/Login.html"><img class="icon icon2" src="../IMAGES/profile.png" alt=""></a>
-            <a href="/Cart.html"><img class="icon icon3" src="../IMAGES/cart.png" alt=""></a>
+            <a href=""><img class="icon icon1" src="/IMAGES/search.png" alt=""></a>
+            <a href="/Login.html"><img class="icon icon2" src="/IMAGES/profile.png" alt=""></a>
+            <a href="/Cart.html"><img class="icon icon3" src="/IMAGES/cart.png" alt=""></a>
         </div>
     </section>
     <!-- <hr> -->
@@ -61,22 +61,22 @@
     <!-- SECTION 4 -->
     <div id="Section_4">
         <div>
-            <img class="Sec4_image" src="../IMAGES/timba 2.webp" alt="">
+            <img class="Sec4_image" src="/IMAGES/timba 2.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="../IMAGES/timba.webp" alt="">
+            <img class="Sec4_image" src="/IMAGES/timba.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="../IMAGES/timba 3.webp" alt="">
+            <img class="Sec4_image" src="/IMAGES/timba 3.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="../IMAGES/timba 4.webp" alt="">
+            <img class="Sec4_image" src="/IMAGES/timba 4.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
     </div>
@@ -115,8 +115,8 @@
             <h3>Burger</h3>
             <p>Socially and environmentally progressive outdoor footwear</p>
             <a href="web.facebook.com/bright.agiage/"><img src="../IMAGES/facebook logo.jpg" alt=""></a>
-            <a href=""><img src="../IMAGES/youtube.png" alt=""></a>
-            <a href=""><img src="../IMAGES/instagram.png" alt=""></a>
+            <a href=""><img src="/IMAGES/youtube.png" alt=""></a>
+            <a href=""><img src="/IMAGES/instagram.png" alt=""></a>
         </div>
 
         <div class="footer_shop footer1">
@@ -154,11 +154,11 @@
       <hr>
 
       <div class="footer_footer">
-            <a href=""><img src="../IMAGES/visa.png" alt=""></a>
-            <a href=""><img src="../IMAGES/bitcoin.png" alt=""></a>
-            <a href=""><img src="../IMAGES/paypal.jpg" alt=""></a>
-            <a href=""><img src="../IMAGES/master card.png" alt=""></a>
-            <a href=""><img src="../IMAGES/stripe.png" alt=""></a>
+            <a href=""><img src="/IMAGES/visa.png" alt=""></a>
+            <a href=""><img src="/IMAGES/bitcoin.png" alt=""></a>
+            <a href=""><img src="/IMAGES/paypal.jpg" alt=""></a>
+            <a href=""><img src="/IMAGES/master card.png" alt=""></a>
+            <a href=""><img src="/IMAGES/stripe.png" alt=""></a>
             <p>&COPY; 2023, Thesus Outdoors Powered by Shopify
                 Refund policy
                 Privacy policy
