--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page</title>
-    <link rel="stylesheet" href="/CSS/Home.css">
+    <link rel="stylesheet" href="CSS/Home.css">
 </head>
 <body>
     <div class="free">
@@ -21,21 +21,21 @@
         <div class="my_nav">
             <nav>
                 <ul>
-                    <a href="/Home.html"><li>Home</li></a>
-                    <a href="/Sale.html"><li>Sale</li></a>
-                    <a href="/Rain.html"><li>Rain</li></a>
-                    <a href="/Snow.html"><li>Snow</li></a>
-                    <a href="/All_wealther.html"><li>All Wealther</li></a>
-                    <a href="/Shop All.html"><li>Shop All</li></a>
-                    <a href="/Values.html"><li>Values</li></a>
+                    <a href="Home.html"><li>Home</li></a>
+                    <a href="Sale.html"><li>Sale</li></a>
+                    <a href="Rain.html"><li>Rain</li></a>
+                    <a href="Snow.html"><li>Snow</li></a>
+                    <a href="All_wealther.html"><li>All Wealther</li></a>
+                    <a href="Shop All.html"><li>Shop All</li></a>
+                    <a href="Values.html"><li>Values</li></a>
                 </ul>
             </nav>
         </div>
 
         <div class="icon">
-            <a href=""><img class="icon icon1" src="/IMAGES/search.png" alt=""></a>
-            <a href="/Login.html"><img class="icon icon2" src="/IMAGES/profile.png" alt=""></a>
-            <a href="/Cart.html"><img class="icon icon3" src="/IMAGES/cart.png" alt=""></a>
+            <a href=""><img class="icon icon1" src="IMAGES/search.png" alt=""></a>
+            <a href="/Login.html"><img class="icon icon2" src="IMAGES/profile.png" alt=""></a>
+            <a href="/Cart.html"><img class="icon icon3" src="IMAGES/cart.png" alt=""></a>
         </div>
     </section>
     <!-- <hr> -->
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <a href="wa.me/09131383065"><img class="whatsapp" src="../IMAGES/whatsapp_logo_2.png" alt="" height="170" width="170"></a>
+    <a href="wa.me/09131383065"><img class="whatsapp" src="IMAGES/whatsapp_logo_2.png" alt="" height="170" width="170"></a>
 
     <!-- SECTION 3 -->
     <section id="Section_3">
@@ -61,22 +61,22 @@
     <!-- SECTION 4 -->
     <div id="Section_4">
         <div>
-            <img class="Sec4_image" src="/IMAGES/timba 2.webp" alt="">
+            <img class="Sec4_image" src="IMAGES/timba 2.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="/IMAGES/timba.webp" alt="">
+            <img class="Sec4_image" src="IMAGES/timba.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="/IMAGES/timba 3.webp" alt="">
+            <img class="Sec4_image" src="IMAGES/timba 3.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
 
         <div>
-            <img class="Sec4_image" src="/IMAGES/timba 4.webp" alt="">
+            <img class="Sec4_image" src="IMAGES/timba 4.webp" alt="">
             <a href=""><p>Buy Now »</p></a>
         </div>
     </div>
@@ -114,9 +114,9 @@
         <div class="footer_social footer1"> 
             <h3>Burger</h3>
             <p>Socially and environmentally progressive outdoor footwear</p>
-            <a href="web.facebook.com/bright.agiage/"><img src="../IMAGES/facebook logo.jpg" alt=""></a>
-            <a href=""><img src="/IMAGES/youtube.png" alt=""></a>
-            <a href=""><img src="/IMAGES/instagram.png" alt=""></a>
+            <a href="web.facebook.com/bright.agiage/"><img src="IMAGES/facebook logo.jpg" alt=""></a>
+            <a href=""><img src="IMAGES/youtube.png" alt=""></a>
+            <a href=""><img src="IMAGES/instagram.png" alt=""></a>
         </div>
 
         <div class="footer_shop footer1">
@@ -154,11 +154,11 @@
       <hr>
 
       <div class="footer_footer">
-            <a href=""><img src="/IMAGES/visa.png" alt=""></a>
-            <a href=""><img src="/IMAGES/bitcoin.png" alt=""></a>
-            <a href=""><img src="/IMAGES/paypal.jpg" alt=""></a>
-            <a href=""><img src="/IMAGES/master card.png" alt=""></a>
-            <a href=""><img src="/IMAGES/stripe.png" alt=""></a>
+            <a href=""><img src="IMAGES/visa.png" alt=""></a>
+            <a href=""><img src="IMAGES/bitcoin.png" alt=""></a>
+            <a href=""><img src="IMAGES/paypal.jpg" alt=""></a>
+            <a href=""><img src="IMAGES/master card.png" alt=""></a>
+            <a href=""><img src="IMAGES/stripe.png" alt=""></a>
             <p>&COPY; 2023, Thesus Outdoors Powered by Shopify
                 Refund policy
                 Privacy policy
