--- a/All_wealther.html
+++ b/All_wealther.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../CSS/All_wealther.css">
+    <link rel="stylesheet" href="CSS/All_wealther.css">
 </head>
 <body>
     <div class="free">
@@ -21,21 +21,21 @@
         <div class="my_nav">
             <nav>
                 <ul>
-                    <a href="../HTML/Home.html"><li>Home</li></a>
-                    <a href="../HTML/Sale.html"><li>Sale</li></a>
-                    <a href="../HTML/Rain.html"><li>Rain</li></a>
-                    <a href="../HTML/Snow.html"><li>Snow</li></a>
-                    <a href="../HTML/All_wealther.html"><li>All Wealther</li></a>
-                    <a href="../HTML/Shop All.html"><li>Shop All</li></a>
-                    <a href="../HTML/Values.html"><li>Values</li></a>
+                    <a href="Home.html"><li>Home</li></a>
+                    <a href="Sale.html"><li>Sale</li></a>
+                    <a href="Rain.html"><li>Rain</li></a>
+                    <a href="Snow.html"><li>Snow</li></a>
+                    <a href="All_wealther.html"><li>All Wealther</li></a>
+                    <a href="Shop All.html"><li>Shop All</li></a>
+                    <a href="Values.html"><li>Values</li></a>
                 </ul>
             </nav>
         </div>
 
         <div class="icon">
-            <a href=""><img class="icon icon1" src="../IMAGES/search.png" alt=""></a>
-            <a href="../HTML/Login.html"><img class="icon icon2" src="../IMAGES/profile.png" alt=""></a>
-            <a href="../HTML/Cart.html"><img class="icon icon3" src="../IMAGES/cart.png" alt=""></a>
+            <a href=""><img class="icon icon1" src="IMAGES/search.png" alt=""></a>
+            <a href="Login.html"><img class="icon icon2" src="IMAGES/profile.png" alt=""></a>
+            <a href="Cart.html"><img class="icon icon3" src="cart.png" alt=""></a>
         </div>
     </section>
 
@@ -51,7 +51,7 @@
     <!-- SECTION 1 -->
     <div id="Section_1">
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 2.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 2.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -68,7 +68,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -86,7 +86,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 3.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 3.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -103,7 +103,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 4.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 4.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#423,456</em> <b>#255,454</b></p>
             <select name="" id="selection">
@@ -123,7 +123,7 @@
      <!-- SECTION 2 -->
      <div id="Section_1">
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 5.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 5.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -140,7 +140,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -158,7 +158,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 6.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 6.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -175,7 +175,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 4.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 4.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#423,456</em> <b>#255,454</b></p>
             <select name="" id="selection">
@@ -196,7 +196,7 @@
     <!-- SECTION 3 -->
     <div id="Section_1">
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 2.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 2.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -213,7 +213,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -231,7 +231,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 3.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 3.webp" alt="">
             <a href=""><p>The Weekend Boot in Black</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#42,456</em> <b>#25,454</b></p>
             <select name="" id="selection">
@@ -248,7 +248,7 @@
         </div>
 
         <div>
-            <img class="Sec1_image" src="../IMAGES/timba 4.webp" alt="">
+            <img class="Sec1_image" src="IMAGES/timba 4.webp" alt="">
             <a href=""><p>The Weekend Boot in Sage</p></a>
             <p class="price"><em style="text-decoration: line-through; padding-right: 1em;">#423,456</em> <b>#255,454</b></p>
             <select name="" id="selection">
@@ -326,11 +326,11 @@
         <hr>
   
         <div class="footer_footer">
-              <a href=""><img src="../IMAGES/visa.png" alt=""></a>
-              <a href=""><img src="../IMAGES/bitcoin.png" alt=""></a>
-              <a href=""><img src="../IMAGES/paypal.jpg" alt=""></a>
-              <a href=""><img src="../IMAGES/master card.png" alt=""></a>
-              <a href=""><img src="../IMAGES/stripe.png" alt=""></a>
+              <a href=""><img src="IMAGES/visa.png" alt=""></a>
+              <a href=""><img src="IMAGES/bitcoin.png" alt=""></a>
+              <a href=""><img src="IMAGES/paypal.jpg" alt=""></a>
+              <a href=""><img src="IMAGES/master card.png" alt=""></a>
+              <a href=""><img src="IMAGES/stripe.png" alt=""></a>
               <p>&COPY; 2023, Thesus Outdoors Powered by Shopify
                   Refund policy
                   Privacy policy
