--- a/All_wealther.html
+++ b/All_wealther.html
@@ -21,7 +21,7 @@
         <div class="my_nav">
             <nav>
                 <ul>
-                    <a href="Home.html"><li>Home</li></a>
+                    <a href="index.html"><li>Home</li></a>
                     <a href="Sale.html"><li>Sale</li></a>
                     <a href="Rain.html"><li>Rain</li></a>
                     <a href="Snow.html"><li>Snow</li></a>
