--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <!-- SECTION 2 -->
     <section id="Section_2">
-        <div class="me">
+        <div class="me col-12 col-sm-12">
             <h1> Our Holiday Sale Is Here</h1>
             <p>And there's something for everyone on your list.</p>
             <button>Shop Now</button>
