--- a/Create_account.html
+++ b/Create_account.html
@@ -18,25 +18,31 @@
             <h1>Burger</h1>
         </div>
 
-        <!-- NAV LINK -->
+         <!-- NAV LINK -->
         <div class="my_nav">
-            <nav>
-                <ul>
-                    <a href="index.html"><li>Home</li></a>
-                    <a href="Sale.html"><li>Sale</li></a>
-                    <a href="Rain.html"><li>Rain</li></a>
-                    <a href="Snow.html"><li>Snow</li></a>
-                    <a href="All_wealther.html"><li>All Wealther</li></a>
-                    <a href="Shop All.html"><li>Shop All</li></a>
-                    <a href="Values.html"><li>Values</li></a>
-                </ul>
-            </nav>
-        </div>
+            <nav class="navbar navbar-expand-lg">
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </div>
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <a href="index.html"><li>Home</li></a>
+                        <a href="Sale.html"><li>Sale</li></a>
+                        <a href="Rain.html"><li>Rain</li></a>
+                        <a href="Snow.html"><li>Snow</li></a>
+                        <a href="All_wealther.html"><li>All Wealther</li></a>
+                        <a href="Shop All.html"><li>Shop All</li></a>
+                        <a href="Values.html"><li>Values</li></a>
+                    </ul>
 
-        <div class="icon">
-            <a href=""><img class="icon icon1" src="IMAGES/search.png" alt=""></a>
-            <a href="Login.html"><img class="icon icon2" src="IMAGES/profile.png" alt=""></a>
-            <a href="Cart.html"><img class="icon icon3" src="IMAGES/cart.png" alt=""></a>
+                     <div class="icon">
+                        <a href="" ><img class="icon icon1" src="IMAGES/search.png" alt=""></a>
+                        <a href="Login.html"><img class="icon icon2" src="IMAGES/profile.png" alt=""></a>
+                        <a href="Cart.html"><img class="icon icon3" src="IMAGES/cart.png" alt=""></a>
+                    </div>
+                </div>
+            </nav>   
         </div>
     </section>
 
